--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,15 @@ project:
   type: website
 
 website:
-  title: "GeospatialResearchLab.github.io"
+  title: "Geospatial Research Lab"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: resources.qmd
+        text: Resources
+      - href: workshops.qmd
+        text: Workshops
 
 format:
   html:
