--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,10 +5,12 @@ website:
   title: "Geospatial Research Lab"
   navbar:
     left:
-      - href: index.qmd
+      - href: https://www.american.edu/library/technology/geospatial/
         text: Home
       - href: workshops.qmd
         text: Workshops
+      - href: https://subjectguides.library.american.edu/gis/home
+        text: "LibGuide"
 
 format:
   html:
