--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,9 @@ project:
   type: website
 
 website:
-  title: "Geospatial Research Lab"
+  title: 
+    text: "Geospatial Research Lab"
+    href: about.qmd
   navbar:
     left:
       - href: https://www.american.edu/library/technology/geospatial/
